fix letter spacing

--- a/src/components/popupbrif/popupbrif.scss
+++ b/src/components/popupbrif/popupbrif.scss
@@ -95,7 +95,7 @@
 						font-family: 'Playfair Display', sans-serif;
 						font-weight: 350;
 						font-style: italic;
-						letter-spacing: -6px;
+						letter-spacing: -4px;
 						line-height: 52px;
 						font-size: 64px;
 						text-align: start;
